--- a/network/templates/network/following.html
+++ b/network/templates/network/following.html
@@ -1,14 +1,14 @@
 {% extends "network/layout.html" %}
 
 {% block body %}
-    <div class="container mt-5">
+    <div class="container col-8 mt-5">
         <h2 class="display-4">My Feed</h2>
     </div>
 
 <!-- Posts list - card view -->
-<div class="container">
+<div class="container col-8">
     {% for post in pagePosts %}
-        <div class="card mt-2 mb-2">
+        <div class="card mt-2 mb-4">
             <h5 class="card-header">
                 <a href="{% url 'profile' user_id=post.creator.id %}" style="text-decoration: none;">@{{ post.creator }}</a>
             </h5>
@@ -19,8 +19,8 @@
             </div>
             <div class="card-footer">
                 <!-- Post info -->
-                <small class="text-muted">{{ post.created_at }}</small><br>
-                <small class="text-muted">
+                <small class="text-muted-custom">{{ post.created_at }}</small><br>
+                <small class="text-muted-custom">
                     {% if user.is_authenticated %}
                     {% if user != post.creator %}
                     Likes: <span id="likes-count-{{ post.id }}" class="likes-count{{ post.id }}"><strong>{{ post.postLike.count }}</strong></span>
@@ -51,7 +51,7 @@
                             <small>{{ comment.created_at|date:'M. d, Y, P' }}</small>
                         </div>
                         <p class="mb-1">{{ comment.message }}</p>
-                        <small class="text-muted" data-created="{{ comment.created_at|date:'U' }}"></small>
+                        <small class="text-muted-custom" data-created="{{ comment.created_at|date:'U' }}"></small>
                     </a>
                     {% endfor %}
                 </div>
