--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -6,17 +6,30 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+        <link rel="apple-touch-icon" sizes="180x180" href="{% static 'assets/favicon/apple-touch-icon.png' %}">
+        <link rel="icon" type="image/png" sizes="32x32" href="{% static 'assets/favicon/favicon-32x32.png' %}">
+        <link rel="icon" type="image/png" sizes="16x16" href="{% static 'assets/favicon/favicon-16x16.png' %}">
+        <link rel="manifest" href="{% static 'assets/favicon/site.webmanifest' %}">
+        
+        <link rel="logo" type="image/png" sizes="16x16" href="{% static 'assets/logo/logo.png' %}">
+
         <title>{% block title %}Social Network{% endblock %}</title>
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
         <link href="{% static 'network/styles.css' %}" rel="stylesheet">
+
+
+
+
         
     </head>
     <body>
         
         <div class="container">
-            <nav class="navbar sticky-top navbar-expand-lg">
-                <a class="navbar-brand mx-4" href="{% url 'index' %}">Network</a>
+            <nav class="navbar sticky-top navbar-expand-lg rounded">
+                <a class="navbar-brand mx-4" href="{% url 'index' %}">
+                    <img src="{% static 'assets/logo/logo.png' %}" class="image-logo" alt="logo">
+                </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -48,11 +61,11 @@
                             </li>
                         {% endif %}
                     </ul>
-                    <div class="navbar-text ml-md-3 flex-nowrap">
+                    <div class="navbar-text m-3 flex-nowrap">
                         <div class="input-group my-2 my-lg-0">
-                            <input type="text" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="search-button">
+                            <input type="text" class="form-control" id="search-input" placeholder="Search" aria-label="Search" aria-describedby="search-button">
                             <div class="input-group-append">
-                                <button class="btn btn-outline-success" type="button" id="search-button">Search</button>
+                                <button class="btn btn-success" type="button" id="search-button">Search</button>
                             </div>
                         </div>
                     </div>
@@ -60,18 +73,19 @@
             </nav>
         </div>
     
-    <div class="body">
         {% block body %}
         {% endblock %}
         
         <!-- Javascript -->
         <script src="{% static 'network/scripts.js' %}"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
             integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
         </script>
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-        </div>
-    </body>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/mark.js/8.11.1/mark.js" integrity="sha512-h3PJjpIP1iilKum3uQMCAD+X8sJCJ5cpySGZQnyJhK9nFLIzPwkrYs5/qCxnH4dM8XUkUhTdNFjDhUsddvfMug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    
+    </div>
 </html>
