--- a/network/templates/network/register.html
+++ b/network/templates/network/register.html
@@ -1,7 +1,7 @@
 {% extends "network/layout.html" %}
 
 {% block body %}
-<div class="d-flex justify-content-center align-items-center min-vh-100">
+<div class="container justify-content-center align-items-center col-3 mt-5">
     <div class="card text-center">
         <div class="card-header">
             <h2>Register</h2>
