--- a/network/templates/network/search_results.html
+++ b/network/templates/network/search_results.html
@@ -7,7 +7,7 @@
 </div>
 
     <!-- Posts list - card view -->
-    <div class="container col-6">
+    <div class="container col-6 search-post">
         {% for post in posts %}
             <div class="card mt-2 mb-4">
                 <h5 class="card-header">
@@ -100,7 +100,15 @@
                                 <div class="text-muted-custom">
                                     {% for comment in post.postComment.all reversed %}
                                         <div class="d-flex w-100 justify-content-between">
-                                            <small class="text-muted-custom">Posted by: <strong>{{ comment.author }}</strong></small>
+                                            <small class="text-muted-custom">
+                                                Posted by: 
+                                                <strong>
+                                                    <a href="{% url 'profile' user_id=post.creator.id %}"
+                                                        class="comment-username">
+                                                        @{{ comment.author }}
+                                                    </a>
+                                                </strong>
+                                            </small>
                                             <small class="text-muted-custom">{{ comment.created_at|date:'M. d, Y, P' }}</small>
                                         </div>
                                         <p class="mb-1 comment-message">{{ comment.message }}</p>
