fixed comments routing user - dockerfile

--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -144,7 +144,7 @@
                                             <small class="text-muted-custom">
                                                 Posted by: 
                                                 <strong>
-                                                    <a href="{% url 'profile' user_id=post.creator.id %}"
+                                                    <a href="{% url 'profile' user_id=comment.author.id %}"
                                                         class="comment-username">
                                                         @{{ comment.author }}
                                                     </a>
