--- a/network/templates/network/search_results.html
+++ b/network/templates/network/search_results.html
@@ -103,7 +103,7 @@
                                             <small class="text-muted-custom">
                                                 Posted by: 
                                                 <strong>
-                                                    <a href="{% url 'profile' user_id=post.creator.id %}"
+                                                    <a href="{% url 'profile' user_id=comment.author.id %}"
                                                         class="comment-username">
                                                         @{{ comment.author }}
                                                     </a>
